--- a/style.css
+++ b/style.css
@@ -8,3 +8,13 @@ canvas {
     top: 50%;
     transform: translate(-50%,-50%);
   }
+
+h1{
+    font-family: monospace;
+    color: #00FF33;
+    font-size: 12px;
+}
+
+.blink{
+    text-decoration: blink;
+}
